argocd/applications/grocy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grocy
  template:
    metadata:
      labels:
        app: grocy
    spec:
      containers:
      - name: grocy
        image: linuxserver/grocy:4.5.0
