argocd/applications/grocy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
spec:
  selector:
    app: grocy
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 9283
